# eeg_challenge

./: .gitignore  JEMA-EEG25-Full-Training.py  README.md  abc.ipynb  augment.py  build_dataset.py  challenge_2.ipynb  challenge_2.py  commandline.txt  creating_weight.ipynb  download_dataset.py  download_dataset.sh  download_dataset_all.sh  environment.yml  experiment.ipynb  experiment_abc.ipynb  finetune_c2_new.py  finetune_challenge1.py  finetune_challenge2.py  local_scoring.py  lr_scheduler.py  merging_logs.ipynb  model.ipynb  movefile.sh  my_model.py  notebook.ipynb  preprocess_data.py  pretrain.py  requirements.txt  structure.json  structure_full.json  structure_mini.json  structure_test.json  submission.py  submission_longdang.py  utils.py
codalab-env/: main.py  pyproject.toml
heavy_packages/: preparing_your_model.py  submission.py
images/: README.md  finetune_challenge2.csv
light_packages/: submission.py
logs/finetune_challenge1_1762095706/: events.out.tfevents.1762095706.ip-172-31-56-136.2315935.0
logs/finetune_challenge1_1762095935/: events.out.tfevents.1762095935.ip-172-31-56-136.2317786.0
logs/finetune_challenge1_1762096411/: events.out.tfevents.1762096411.ip-172-31-56-136.2322715.0
logs/finetune_challenge1_1762097247/: events.out.tfevents.1762097247.ip-172-31-56-136.2330896.0
logs/finetune_challenge1_1762137920/: events.out.tfevents.1762137920.93588e1400d5.3885.0
model/: eegmamba_jamba.py  loss.py  mdn.py  meta_encoder.py
notebooks/: challenge_1.ipynb
preprocessing/: preprocess_challenge2.py  run_preprocess.txt
start_kit/: challenge_2.py
(+37 files in other folders)
