[project]
name = "codalab-env"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "mne",
    "braindecode",
    "lightning",
    "eegdash",
]

[tool.uv]
managed = true
extra-index-url = ["https://download.pytorch.org/whl/cpu"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
